Update Dockerfile to build R packages from scratch